Tablet subtitle done

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -40,11 +40,24 @@
   }
 
   .form__title {
-    min-height: 270px;//grid-temp
+    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-position: center 0%;
+    background-repeat: no-repeat;
+    padding-top: 175px;
+    padding-bottom: 60px;
+    font-size: 50px;
   }
 
   .form__subtitle {
-    min-height: 170px;//grid-temp
+    padding-top: 93px;
+    font-size: 18px;
+    line-height: 1.67;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .form__subtitle--short {
+    display: block;
   }
 }
 
