Form title&subtitle finished

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -68,12 +68,18 @@
   }
 
   .form__title {
-    min-height: 220px;//grid-temp
     padding-left: 120px;
     padding-right: 120px;
+    padding-bottom: 83px;
   }
 
-  .form_subtitle {
-    min-height: 182px;//grid-temp
+  .form__subtitle {
+    padding-left: 220px;
+    padding-right: 220px;
+
+  }
+
+  .form__subtitle--short {
+    display: inline;
   }
 }
