--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -1,28 +1,85 @@
 .user-photos {
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center 0%;
   width: 320px;
-  min-height: 3220px;//grid-temp
   margin: 0 auto;
-  //background-image: url("../../img/bg-back-mobile@1x.jpg"); //disabled for grid
-  //background-repeat: no-repeat;
+  padding-top: 90px;
 }
 
 .user-photos__title {
   .intro-font;
-  min-height: 110px;//grid-temp
-}
-
-.user-photos__title,
-.user-photos__subtitle {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 5px;
+  padding-bottom: 79px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0;
 }
 
 .user-photos__subtitle {
+  padding-top: 46px;
+  padding-bottom: 51px;
+  padding-left: 35px;
+  padding-right: 35px;
+  margin: 0;
+  background-color: @white;
+}
+
+.user-photos__subtitle {
   .subtitle-font;
-  min-height: 125px;//grid-temp
+}
+
+.user-photos__list p {
+  margin: 0;
+}
+
+.user-photos__list {
+  .unstyle;
+  margin: 0 auto;;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: @white;
+}
+
+.user-photos__item {
+  background-color: @lightGrey;
+  width: 280px;
+}
+
+.user-photos__author-image--top {
+  max-width: 115%;
+  margin-left: -20px;
+}
+
+.user_photos__text {
+  font-size: 14px;
+  text-align: left;
+  line-height: 24px;
+  color: @dark;
+}
+
+.user-photos__author-name {
+  display: block;
+  font-size: 14px;
+  text-align: left;
+  line-height: 24px;
+  font-weight: bold;
+  font-style: normal;
+  padding-left: 17px;
+  color: @dark;
+  padding-top: 15px; //maybe first only
+}
+
+.user-photos__time {
+  font-weight: 300;
+  font-size: 12px;
+  .uppercase;
+}
+
+.user-photos__like {
+  color: @lipstick;
 }
 
 @media (min-width: @tabletwidth) {
@@ -55,20 +112,6 @@
   .user-photos__subtitle {
     min-height: 182px;//grid-temp
   }
-}
-
-.user-photos__list {
-  .unstyle;
-  margin: 0;
-  padding: 0;
-  min-height: 2300px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.user-photos__item {
-  min-height: 320px;
-  width: 320px; //grid-temp
 }
 
 @media (min-width: @tabletwidth) {
@@ -116,27 +159,4 @@
   }
 }
 
-.user_photos__text {
-  font-size: 14px;
-  text-align: left;
-  line-height: 24px;
-  color: @dark;
-}
 
-.user-photos__author-name {
-  font-size: 14px;
-  text-align: left;
-  line-height: 24px;
-  font-weight: bold;
-  color: @dark;
-}
-
-.user-photos__time {
-  font-weight: 300;
-  font-size: 12px;
-  .uppercase;
-}
-
-.user-photos__like {
-  color: @lipstick;
-}
