Form tablet done

--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -53,11 +53,14 @@
   margin-left: -20px;
 }
 
-.user_photos__text {
+.user-photos__text {
   font-size: 14px;
   text-align: left;
   line-height: 24px;
   color: @dark;
+  padding-left: 17px;
+  padding-right: 10px;
+  padding-bottom: 5px; //first only
 }
 
 .user-photos__author-name {
@@ -80,6 +83,12 @@
 
 .user-photos__like {
   color: @lipstick;
+  font-size: 12px;
+  line-height: 24px;
+  .uppercase;
+  padding-left: 49px;
+  padding-top: 4px;
+  padding-bottom: 40px; //maybe firschild
 }
 
 @media (min-width: @tabletwidth) {
