--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -17,6 +17,7 @@
 }
 
 .user-photos__subtitle {
+  .subtitle-font;
   padding-top: 46px;
   padding-bottom: 51px;
   padding-left: 35px;
@@ -25,17 +26,13 @@
   background-color: @white;
 }
 
-.user-photos__subtitle {
-  .subtitle-font;
-}
-
 .user-photos__list p {
   margin: 0;
 }
 
 .user-photos__list {
   .unstyle;
-  margin: 0 auto;;
+  margin: 0 auto;
   padding: 0;
   display: flex;
   justify-content: center;
@@ -121,7 +118,9 @@
     width: 620px;
     background-color: @white;
     position: relative;
+
     .user-photos__like {
+
       position: absolute;
       top: 530px;
       left: 423px;
@@ -131,7 +130,7 @@
   .user-photos__author-image--top {
     width: 660px;
     height: 509px;
-    margin-left: -20px;;
+    margin-left: -20px;
   }
 
   .user-photos__author-name {
@@ -187,5 +186,3 @@
     margin-bottom: 0;
   }
 }
-
-
