--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -35,7 +35,7 @@
 }
 
 .page-footer a {
-  .unstyle
+  .unstyle;
 }
 
 .social__list {
@@ -73,22 +73,22 @@
 }
 
 .social__link {
-    position: relative;
-    display: block;
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-  }
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
 
-  .social__link::before {
-    position: absolute;
-    content: "";
-    width: 46px;
-    height: 46px;
-    opacity: 0.1;
-    border: solid 3px @dark;
-    border-radius: 50%;
-  }
+.social__link::before {
+  position: absolute;
+  content: "";
+  width: 46px;
+  height: 46px;
+  opacity: 0.1;
+  border: solid 3px @dark;
+  border-radius: 50%;
+}
 
 @media (min-width: @tabletwidth) {
   .page-footer {
@@ -121,8 +121,8 @@
   }
 
   .copyright__text {
-  margin-right: -2px;
-  margin-top: 35px;
+    margin-right: -2px;
+    margin-top: 35px;
   }
 }
 
@@ -149,7 +149,7 @@
   }
 
   .copyright__text {
-  margin-right: -2px;
-  margin-top: 35px;
+    margin-right: -2px;
+    margin-top: 35px;
   }
 }
