Desktop nav background fixed

--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -32,4 +32,9 @@
   .site-list__item:last-child {
     margin-right: 20px;
   }
+
+  .main-nav .site-list__item {
+    background-color: unset;
+    box-shadow: unset;
+  }
 }
