--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -61,6 +61,8 @@
   .page-header__logo {
     height: 110px;
     width: 230px;
+    background-color: unset;
+    box-shadow: unset;
   }
 
   .page-header__logo-image {
