--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -37,4 +37,18 @@
     background-color: unset;
     box-shadow: unset;
   }
+
+  .site-list__item--current {
+    position: relative;
+  }
+
+  .site-list__item--current::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: @white;
+    top: 90%;
+    left: 0%;
+  }
 }
