--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -90,6 +90,18 @@
   border-radius: 50%;
 }
 
+.social__link:hover::before {
+  opacity: 1;
+}
+
+.social__link:active::before {
+  opacity: 0.1;
+}
+
+.social__link:active svg {
+  opacity: 0.3;
+}
+
 @media (min-width: @tabletwidth) {
   .page-footer {
     width: 620px;
