--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -5,3 +5,11 @@
   text-align: left;
   color: @dark;
 }
+
+.copyright__image:hover path {
+  fill: @dark;
+}
+
+.copyright__image:active {
+  opacity: 0.3;
+}
