--- a/source/less/blocks/dowload-app.less
+++ b/source/less/blocks/dowload-app.less
@@ -18,6 +18,13 @@
   border-radius: 30px;
   margin: 30px auto;
   letter-spacing: 2px;
+  &:hover {
+    background-color: @white;
+    color: @lipstick;
+  }
+  &:active {
+    color: darken(@lipstick 30%);
+  }
 }
 
 .download-app__list {
