Welcome background retina started

--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -5,6 +5,9 @@
   width: 320px;
   margin: 0 auto;
   padding-top: 90px;
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 .welcome__slogan {
