--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,6 +1,5 @@
 .form {
   width: 320px;
-  min-height: 2472px;//grid-temp
   margin: 0 auto;
 }
 
@@ -14,6 +13,10 @@
   min-height: 110px;//grid-temp
   padding-top: 100px;
   padding-bottom: 30px;
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 .form__title,
@@ -46,6 +49,10 @@
     padding-top: 175px;
     padding-bottom: 60px;
     font-size: 50px;
+    @media (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-tablet@2x.jpg");
+    background-size: 1197px auto;
+    }
   }
 
   .form__subtitle {
@@ -71,6 +78,13 @@
     padding-left: 120px;
     padding-right: 120px;
     padding-bottom: 83px;
+    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-position: center 0%;
+    background-repeat: no-repeat;
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      background-size: 2550px auto;
+    }
   }
 
   .form__subtitle {
