Photos desktop aligned

--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -196,7 +196,6 @@
   }
 
   .user-photos__item {
-    height: 560px;//grid-temp
     width: 300px; //grid-temp
   }
 
@@ -214,7 +213,16 @@
 
   .user-photos__item:first-child {
     width: 100%;
-    height: 600px;//grid-temp
     margin-bottom: 0;
+    .user-photos__author-name {
+      width: 913px;
+      margin: 0 auto;
+    }
+    .user-photos__text {
+      width: 890px;
+      margin: 0 auto;
+      padding-left: 25px;
+      padding-right: 25px;
+    }
   }
 }
