--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -60,7 +60,7 @@
   color: @dark;
   padding-left: 17px;
   padding-right: 10px;
-  padding-bottom: 5px; //first only
+  padding-bottom: 5px;
 }
 
 .user-photos__author-name {
@@ -72,7 +72,7 @@
   font-style: normal;
   padding-left: 17px;
   color: @dark;
-  padding-top: 15px; //maybe first only
+  padding-top: 15px;
 }
 
 .user-photos__time {
@@ -196,7 +196,7 @@
   }
 
   .user-photos__item {
-    width: 300px; //grid-temp
+    width: 300px;
   }
 
   .user-photos__author-image--top {
