--- a/source/less/blocks/user-photos.less
+++ b/source/less/blocks/user-photos.less
@@ -5,6 +5,11 @@
   width: 320px;
   margin: 0 auto;
   padding-top: 90px;
+
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../../img/bg-back-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 .user-photos__title {
@@ -96,6 +101,11 @@
   .user-photos {
     width: 660px;
     background-image: url("../../img/bg-back-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   .user-photos__title {
@@ -177,6 +187,10 @@
   .user-photos {
     width: 1200px;
     background-image: url("../../img/bg-back-desktop@1x.jpg");
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      background-size: 2550px auto;
+    }
   }
 
   .user-photos__title {
